force-app/main/default/objects/CaseContactSidePanelTabSettings__c/CaseContactSidePanelTabSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SSSW - Used to show Different related lists that can appear on the contact side panel, used by CaseContactSidepanelContExt</description>
    <label>Case Contact Side Panel Tab Settings</label>
</CustomObject>