force-app/main/default/objects/CaseContactSidePanelTabSettings__c/fields/LinkableField__c.field-meta.xml
<CustomField>
    <fullName>LinkableField__c</fullName>
    <label>Linkable Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>