force-app/main/default/objects/CaseContactSidePanelTabSettings__c/fields/TabLabel__c.field-meta.xml
<CustomField>
    <fullName>TabLabel__c</fullName>
    <label>Tab Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>